--- a/style.css
+++ b/style.css
@@ -86,8 +86,11 @@ fieldset {
 #container, header, #search, #results {
 	position: relative;
 	width: 960px;
-	height: 100%;
 	margin: 0 auto;
+}
+
+#container {
+	height: 200px;
 }
 
 #header {
@@ -97,12 +100,44 @@ fieldset {
 #resultscontainer {
 	display: none;
 	position: relative;
-	opacity: 0.85;
+	opacity: 0.95;
 	background: white;
-	height: 100%;
-	padding: 15px 0;
-	top: 200px;
+	overflow: scroll;
 }
+
+#resultscontainer a {
+	color: #999;
+}
+
+#resultscontainer a:hover {
+	text-decoration: underline;
+}
+
+#resultsLeft {
+	display: block;
+	position: absolute;
+	left: 0;
+	width: 700px;
+}
+
+#resultsRight {
+	position: absolute;
+	right: 0;
+	display: block;
+	background-color: #f5989d;
+	color: white;
+	width: 200px;
+	border: 1px solid silver;
+	box-shadow: 0 0 10px silver;
+	padding: 10px 25px;
+	font-size: 0.9em;
+}
+
+#resultsRight a {
+	color: red;
+}
+
+/* Menu */
 
 #menu {
 	position: absolute;
