Initial add of the Wardrobe dB
Added PHP mySQL connect to convert to JSON using PDO, bringing in data
as objects. Initial styling.

--- a/style.css
+++ b/style.css
@@ -175,3 +175,11 @@ fieldset {
 	cursor: pointer;
 	background-color: red;
 }
+
+#lastfmdata p {
+	width: 250px;
+	height: 250px;
+	border-radius: 125px;
+	overflow: hidden;
+	
+}
