--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,4 @@
-@import "variables.sass"
-@import "rem.sass"
-@import "mixins.sass"
-@import "theme.sass"
+@import "variables"
+@import "functions/rem"
+@import "functions/mixins"
+@import "theme"
