--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,8 @@
 @import "variables"
 @import "functions/rem"
 @import "functions/mixins"
-@import "theme"
+@import "fonts"
+@import "global"
+
+// Modules
+@import "modules/artist-bio"
