--- a/templates/common/document_head.jade
+++ b/templates/common/document_head.jade
@@ -1,7 +1,11 @@
-head
+head(profile="http://gmpg.org/xfn/11")
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge,chrome=1')
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    title #{html_title}
+    block page-meta
+        title WardrobeFM - Your Style, Your Music
+        meta(name="description" content="Wardrobe.FM: Your music, your style")
+    link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic' type='text/css')
     link(rel='stylesheet' href="css/normalize.css")
     link(rel='stylesheet' href="css/style.css")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
