--- a/templates/common/script_inclusions.jade
+++ b/templates/common/script_inclusions.jade
@@ -1,5 +1,4 @@
-  script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
-  script(src="//code.jquery.com/jquery-1.11.0.min.js")
-  script(src="//code.jquery.com/jquery-migrate-1.2.1.min.js")
-  script(src="/js/vendor/modernizr-2.8.3.js")
-  script(src="/js/vendor/html5shiv.js")
+script(src="//code.jquery.com/jquery-1.11.0.min.js")
+script(src="//code.jquery.com/jquery-migrate-1.2.1.min.js")
+script(src="/js/vendor/modernizr-2.8.3.js")
+script(src="/js/artist-bio.js")
