Author Bio, search, and search results modules completed. Last.FM is pulling data in and populating the searchresults container. Styling/redesign next!

--- a/sass/functions/_mixins.sass
+++ b/sass/functions/_mixins.sass
@@ -22,5 +22,5 @@
   background: transparent url('#{$imageUrl}/#{$fileName}') no-repeat $vertical $horizontal
 
 @mixin cssAnimate ($property: all)
-  transition: $property 0.2s ease-in-out
+  transition: $property 0.2s ease-out
   -webkit-backface-visibility: hidden // prevents chrome pixel jumping
