--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,4 +5,6 @@
 @import "global"
 
 // Modules
+@import "modules/artist-search"
+@import "modules/artist-search-results"
 @import "modules/artist-bio"
