--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
   font-size: 18px ;
   font-size: 1.8rem ;
-  font-family: "Open Sans Condensed", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-weight: 300; }
 
 h1, h2 {
+  font-family: "Yanone Kaffeesatz", Helvetica, Arial, sans-serif;
   font-weight: 300; }
 
 h1 {
@@ -20,8 +21,9 @@ h1 {
   color: #f5989d; }
 
 h2 {
-  margin: 0 0 10px ;
-  margin: 0 0 1rem ; }
+  margin: 0;
+  font-size: 18px ;
+  font-size: 1.8rem ; }
 
 html {
   font-size: 62.5%; }
@@ -40,7 +42,7 @@ body {
 /* Animation */
 input[type="submit"],
 button {
-  transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-out;
   -webkit-backface-visibility: hidden; }
 
 /* General */
@@ -99,51 +101,15 @@ ul.nolist {
 #header {
   height: 30vh;
   min-height: 315px;
-  text-align: center; }
-
-#search input[type="text"], #search button {
-  -webkit-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -o-border-radius: 10px;
-  border-radius: 10px;
-  -webkit-box-shadow: 0 0 10px;
-  -ms-box-shadow: 0 0 10px;
-  -moz-box-shadow: 0 0 10px;
-  -o-box-shadow: 0 0 10px;
-  box-shadow: 0 0 10px;
-  display: inline-block;
-  vertical-align: top;
-  border: 0; }
-#search input[type="text"] {
-  font-size: 22px ;
-  font-size: 2.2rem ;
-  padding: 7px 9px ;
-  padding: 0.7rem 0.9rem ;
-  color: #7b8386;
-  width: 88%;
-  height: 42px;
-  outline: none;
-  opacity: 0.9; }
-#search button {
-  font-size: 14px ;
-  font-size: 1.4rem ;
-  width: 7%;
-  margin-left: 3%;
-  height: 40px;
-  background-color: #f5989d;
-  color: white;
-  font-weight: bold;
-  text-transform: uppercase; }
-  #search button:hover, #search button:focus {
-    cursor: pointer; }
+  text-align: center;
+  padding-top: 100px; }
 
 #resultscontainer {
   position: relative;
   opacity: 0.9;
   background: white;
   overflow: scroll;
-  height: 70vh; }
+  height: 40vh; }
   #resultscontainer a {
     color: #999; }
     #resultscontainer a:hover {
@@ -205,9 +171,150 @@ body.loading {
   body.loading .modal {
     display: block; }
 
+#search input[type="text"], #search button {
+  -webkit-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 10px;
+  -ms-box-shadow: 0 0 10px;
+  -moz-box-shadow: 0 0 10px;
+  -o-box-shadow: 0 0 10px;
+  box-shadow: 0 0 10px;
+  display: inline-block;
+  vertical-align: top;
+  border: 0; }
+#search input[type="text"] {
+  font-size: 18px ;
+  font-size: 1.8rem ;
+  padding: 7px 9px ;
+  padding: 0.7rem 0.9rem ;
+  color: #7b8386;
+  width: 88%;
+  height: 42px;
+  outline: none;
+  opacity: 0.9; }
+#search button {
+  font-size: 14px ;
+  font-size: 1.4rem ;
+  width: 7%;
+  margin-left: 3%;
+  height: 40px;
+  background-color: #f5989d;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase; }
+  #search button:hover, #search button:focus {
+    cursor: pointer; }
+
+[data-module="artist-search-results"] {
+  margin: 10px 0 ;
+  margin: 1rem 0 ; }
+  [data-module="artist-search-results"] .tag {
+    display: inline-block;
+    vertical-align: top;
+    padding: 2px 10px 2px 4px ;
+    padding: 0.2rem 1rem 0.2rem 0.4rem ;
+    background-color: #f5989d;
+    font-size: 10px ;
+    font-size: 1rem ;
+    margin: 0 5px ;
+    margin: 0 0.5rem ;
+    text-transform: uppercase; }
+
 [data-module="artist-bio"] {
   width: 100%;
   height: 100%;
   display: block; }
+  [data-module="artist-bio"] ul {
+    display: flex;
+    justify-content: flex-end;
+    flex-flow: wrap-reverse row-reverse;
+    align-content: flex-start; }
+    [data-module="artist-bio"] ul li {
+      width: 23%;
+      height: 100%;
+      margin: 1%;
+      align-self: flex-end;
+      position: relative; }
+  [data-module="artist-bio"] .search-term {
+    padding: 5px 15px ;
+    padding: 0.5rem 1.5rem ;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px ;
+    font-size: 1.4rem ;
+    font-weight: bold; }
+  [data-module="artist-bio"] .artist-pic-container {
+    display: inline-block;
+    vertical-align: top;
+    width: 78px ;
+    width: 7.8rem ;
+    height: 80px ;
+    height: 8rem ;
+    font-size: 0;
+    overflow: hidden;
+    border: 3px solid #f5989d;
+    border-radius: 40px ;
+    border-radius: 4rem ; }
+    [data-module="artist-bio"] .artist-pic-container img {
+      width: auto;
+      height: 100%;
+      position: relative;
+      left: 49%;
+      -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      -moz-transform: translateX(-50%);
+      -o-transform: translateX(-50%);
+      transform: translateX(-50%);
+      -webkit-backface-visibility: hidden; }
+  [data-module="artist-bio"] .artist-meta {
+    position: absolute;
+    top: 0;
+    left: 40px;
+    border: 2px solid #f5989d;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    background-color: white;
+    border-radius: 10px; }
+  [data-module="artist-bio"] .artist-name {
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 3%;
+    margin-left: 40px ;
+    margin-left: 4rem ;
+    margin-bottom: 30px ;
+    margin-bottom: 3rem ; }
+  [data-module="artist-bio"] a.expand {
+    position: absolute;
+    top: 40px ;
+    top: 4rem ;
+    right: 7px ;
+    right: 0.7rem ;
+    font-size: 10px ;
+    font-size: 1rem ;
+    text-transform: uppercase;
+    cursor: pointer; }
+    [data-module="artist-bio"] a.expand:hover, [data-module="artist-bio"] a.expand:focus {
+      text-decoration: none; }
+  [data-module="artist-bio"] .more-info-container.hidden .more-info {
+    height: 0;
+    opacity: 0;
+    visibility: hidden; }
+  [data-module="artist-bio"] .more-info {
+    font-size: 12px ;
+    font-size: 1.2rem ;
+    transition: all 0.2s ease-in-out;
+    height: 400px;
+    opacity: 1;
+    visibility: visible; }
+    [data-module="artist-bio"] .more-info > * {
+      margin: 0 15px ;
+      margin: 0 1.5rem ; }
+    [data-module="artist-bio"] .more-info h3 {
+      margin: 0 15px ;
+      margin: 0 1.5rem ;
+      padding-top: 15px ;
+      padding-top: 1.5rem ; }
 
 /*# sourceMappingURL=style.css.map */
