--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -4,12 +4,14 @@ $pink: #f5989d
 $shadow: $text-color
 
 $link-color: white
+$border-color: $pink
 
-$font-family-sans-serif: 'Open Sans Condensed', Helvetica, Arial, sans-serif
+$font-family-sans-serif: 'Open Sans', Helvetica, Arial, sans-serif
+$heading-font: 'Yanone Kaffeesatz', Helvetica, Arial, sans-serif 
 $font-size-base: 18px
 
 $font-size-h1: 72px
-$font-size-h2: 22px
+$font-size-h2: 18px
 
 $body-font-weight: 300
 
