--- a/templates/common/document_head.jade
+++ b/templates/common/document_head.jade
@@ -5,7 +5,7 @@ head(profile="http://gmpg.org/xfn/11")
     block page-meta
         title WardrobeFM - Your Style, Your Music
         meta(name="description" content="Wardrobe.FM: Your music, your style")
-    link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic' type='text/css')
+    link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Open+Sans+Condensed:300,700|Yanone+Kaffeesatz' type='text/css')
     link(rel='stylesheet' href="css/normalize.css")
     link(rel='stylesheet' href="css/style.css")
     script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
