--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,15 +1,15 @@
 $body-color: black
-$text-color: #666666
-$pink: #f5989d
+$text-color: #252525
+$pink: #8f043a
 $shadow: $text-color
 
 $link-color: white
 $border-color: $pink
 
-$font-family-sans-serif: 'Open Sans', Helvetica, Arial, sans-serif
-$heading-font: 'Yanone Kaffeesatz', Helvetica, Arial, sans-serif 
-$font-size-base: 18px
+$font-family-sans-serif: 'Oswald', Helvetica, Arial, sans-serif
+$font-family-serif: 'Playfair Display', Times, serif
 
+$font-size-base: 16px
 $font-size-h1: 72px
 $font-size-h2: 18px
 
@@ -18,3 +18,5 @@ $body-font-weight: 300
 $imageUrl: '../img'
 
 $siteWidth: 960px
+
+$icon-color: #b5b6b8
