--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,9 +2,11 @@
 @import "functions/rem"
 @import "functions/mixins"
 @import "fonts"
+@import "icons"
 @import "global"
+@import "header"
 
 // Modules
-@import "modules/artist-search"
-@import "modules/artist-search-results"
+@import "modules/post-artist-search"
+@import "modules/post-artist-tags"
 @import "modules/artist-bio"
