--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
+.serif, body {
+  font-family: "Oswald", Helvetica, Arial, sans-serif; }
+
+.sans, h1, h2 {
+  font-family: "Playfair Display", Times, serif; }
+
 body {
-  font-size: 18px ;
-  font-size: 1.8rem ;
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-size: 16px ;
+  font-size: 1.6rem ;
   font-weight: 300; }
 
 h1, h2 {
-  font-family: "Yanone Kaffeesatz", Helvetica, Arial, sans-serif;
   font-weight: 300; }
 
 h1 {
@@ -13,17 +17,34 @@ h1 {
   font-size: 7.2rem ;
   margin: 0 0 15px ;
   margin: 0 0 1.5rem ;
-  -webkit-text-shadow: 0px 0px 10px #666666;
-  -ms-text-shadow: 0px 0px 10px #666666;
-  -moz-text-shadow: 0px 0px 10px #666666;
-  -o-text-shadow: 0px 0px 10px #666666;
-  text-shadow: 0px 0px 10px #666666;
-  color: #f5989d; }
+  -webkit-text-shadow: 0px 0px 10px #252525;
+  -ms-text-shadow: 0px 0px 10px #252525;
+  -moz-text-shadow: 0px 0px 10px #252525;
+  -o-text-shadow: 0px 0px 10px #252525;
+  text-shadow: 0px 0px 10px #252525;
+  color: #8f043a; }
 
 h2 {
   margin: 0;
   font-size: 18px ;
   font-size: 1.8rem ; }
+
+[data-module="post-artist-search"] .post-photo, [data-module="post-artist-search"] .post-video, [data-module="post-artist-search"] .post-text-post, [data-module="post-artist-search"] .post-tag-friend {
+  width: 1em;
+  height: 1em;
+  display: inline-block; }
+
+[data-module="post-artist-search"] .post-photo {
+  background: url("../images/icons/icon-photo.svg") no-repeat center center; }
+
+[data-module="post-artist-search"] .post-video {
+  background: url("../images/icons/icon-video.svg") no-repeat center center; }
+
+[data-module="post-artist-search"] .post-text-post {
+  background: url("../images/icons/icon-text.svg") no-repeat center center; }
+
+[data-module="post-artist-search"] .post-tag-friend {
+  background: url("../images/icons/icon-add-person.svg") no-repeat center center; }
 
 html {
   font-size: 62.5%; }
@@ -34,8 +55,8 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  color: #666666;
-  background: black url("../img/bg01.jpg") center center fixed no-repeat;
+  color: #252525;
+  background: black url("../images/bg01.jpg") center center fixed no-repeat;
   position: relative;
   height: 100vh; }
 
@@ -49,10 +70,8 @@ button {
 *,
 *:after,
 *:before {
-  box-sizing: border-box; }
-
-*:focus {
-  outline: 0; }
+  box-sizing: border-box;
+  text-rendering: optimizeLegibility; }
 
 a {
   color: white;
@@ -69,6 +88,21 @@ input[type="password"] {
   text-align: start;
   text-rendering: optimizelegibility; }
 
+button {
+  font-size: 14px ;
+  font-size: 1.4rem ;
+  background-color: #8f043a;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: 0;
+  letter-spacing: 1px ;
+  letter-spacing: 0.1rem ;
+  padding: 6px 20px ;
+  padding: 0.6rem 2rem ; }
+  button:hover, button:focus {
+    cursor: pointer; }
+
 ul.nolist {
   list-style-type: none;
   margin: 0;
@@ -83,140 +117,86 @@ ul.nolist {
   padding: 0;
   position: absolute;
   width: 1px; }
+  .visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto; }
 
-.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  width: auto; }
+.wrapper, main {
+  width: 960px ;
+  width: 96rem ;
+  margin-left: auto;
+  margin-right: auto; }
 
-/* Begin page styles */
-#header, #searchContainer, #search, #results {
-  position: relative;
-  width: 960px;
-  margin: 0 auto; }
+main {
+  margin-top: 80px ;
+  margin-top: 8rem ;
+  opacity: 0.95; }
 
-#header {
-  height: 30vh;
-  min-height: 315px;
-  text-align: center;
-  padding-top: 100px; }
-
-#resultscontainer {
-  position: relative;
-  opacity: 0.9;
-  background: white;
-  overflow: scroll;
-  height: 40vh; }
-  #resultscontainer a {
-    color: #999; }
-    #resultscontainer a:hover {
-      text-decoration: underline; }
-
-/* Menu */
-#menu > ul, #items > ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0; }
-
-#menu {
-  position: absolute;
-  top: 0;
-  right: 0;
-  text-align: right;
-  height: 26px; }
-  #menu ul > li {
-    margin: 0 10px 0 0 ;
-    margin: 0 1rem 0 0 ;
-    padding: 2px 20px ;
-    padding: 0.2rem 2rem ;
-    font-size: 16px ;
-    font-size: 1.6rem ;
-    display: inline-block;
-    vertical-align: top;
-    -webkit-border-bottom-left-radius: 5px;
-    -ms-border-bottom-left-radius: 5px;
-    -moz-border-bottom-left-radius: 5px;
-    -o-border-bottom-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    -webkit-border-bottom-right-radius: 5px;
-    -ms-border-bottom-right-radius: 5px;
-    -moz-border-bottom-right-radius: 5px;
-    -o-border-bottom-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    color: white;
-    background-color: #f5989d;
-    opacity: 0.85; }
-    #menu ul > li.last {
-      margin-right: 0; }
-    #menu ul > li.item:hover {
-      cursor: pointer;
-      background-color: red; }
-
-/* AJAX Loading modal */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(255, 255, 255, 0.8) url("http://i.stack.imgur.com/FhHRx.gif") 50% 320px no-repeat; }
-
-body.loading {
-  overflow: hidden; }
-  body.loading .modal {
-    display: block; }
-
-#search input[type="text"], #search button {
-  -webkit-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -o-border-radius: 10px;
-  border-radius: 10px;
-  -webkit-box-shadow: 0 0 10px;
-  -ms-box-shadow: 0 0 10px;
-  -moz-box-shadow: 0 0 10px;
-  -o-box-shadow: 0 0 10px;
-  box-shadow: 0 0 10px;
-  display: inline-block;
-  vertical-align: top;
-  border: 0; }
-#search input[type="text"] {
-  font-size: 18px ;
-  font-size: 1.8rem ;
-  padding: 7px 9px ;
-  padding: 0.7rem 0.9rem ;
-  color: #7b8386;
-  width: 88%;
-  height: 42px;
-  outline: none;
-  opacity: 0.9; }
-#search button {
-  font-size: 14px ;
-  font-size: 1.4rem ;
-  width: 7%;
-  margin-left: 3%;
-  height: 40px;
-  background-color: #f5989d;
-  color: white;
-  font-weight: bold;
-  text-transform: uppercase; }
-  #search button:hover, #search button:focus {
-    cursor: pointer; }
-
-[data-module="artist-search-results"] {
+[data-module] {
   margin: 10px 0 ;
   margin: 1rem 0 ; }
-  [data-module="artist-search-results"] .tag {
+
+header#header {
+  background-color: #8f043a;
+  width: 100%;
+  height: 70px ;
+  height: 7rem ;
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0.9; }
+  header#header > * {
+    padding-top: 20px ;
+    padding-top: 2rem ; }
+
+[data-module="post-artist-search"] {
+  background-color: white; }
+  [data-module="post-artist-search"] #post-artist-meta {
+    border-top: 2px solid #8f043a; }
+  [data-module="post-artist-search"] input[type="text"] {
+    font-size: 18px ;
+    font-size: 1.8rem ;
+    padding: 7px 9px ;
+    padding: 0.7rem 0.9rem ;
+    color: #7b8386;
+    width: 88%;
+    height: 42px;
+    outline: none;
+    opacity: 0.9;
+    background-color: transparent;
+    border: 0; }
+  [data-module="post-artist-search"] button {
+    display: inline-block;
+    vertical-align: top; }
+  [data-module="post-artist-search"] .post-types {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 10px ;
+    margin-left: 1rem ; }
+    [data-module="post-artist-search"] .post-types li {
+      display: inline-block;
+      vertical-align: top; }
+      [data-module="post-artist-search"] .post-types li a {
+        display: block;
+        cursor: pointer;
+        width: 36px ;
+        width: 3.6rem ;
+        height: 30px ;
+        height: 3rem ; }
+
+[data-module="post-artist-tags"] {
+  margin: 10px 0 ;
+  margin: 1rem 0 ; }
+  [data-module="post-artist-tags"] .tag {
     display: inline-block;
     vertical-align: top;
     padding: 2px 10px 2px 4px ;
     padding: 0.2rem 1rem 0.2rem 0.4rem ;
-    background-color: #f5989d;
+    background-color: #8f043a;
     font-size: 10px ;
     font-size: 1rem ;
     margin: 0 5px ;
@@ -255,7 +235,7 @@ body.loading {
     height: 8rem ;
     font-size: 0;
     overflow: hidden;
-    border: 3px solid #f5989d;
+    border: 3px solid #8f043a;
     border-radius: 40px ;
     border-radius: 4rem ; }
     [data-module="artist-bio"] .artist-pic-container img {
@@ -273,7 +253,7 @@ body.loading {
     position: absolute;
     top: 0;
     left: 40px;
-    border: 2px solid #f5989d;
+    border: 2px solid #8f043a;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     background-color: white;
     border-radius: 10px; }
@@ -316,5 +296,3 @@ body.loading {
       margin: 0 1.5rem ;
       padding-top: 15px ;
       padding-top: 1.5rem ; }
-
-/*# sourceMappingURL=style.css.map */
