--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -4,7 +4,7 @@ html
 body
   +vendor_prefix(background-size, cover)
   color: $text-color
-  background: $body-color url('../img/bg01.jpg') center center fixed no-repeat
+  background: $body-color url('../images/bg01.jpg') center center fixed no-repeat
   position: relative
   height: 100vh
 
@@ -18,9 +18,7 @@ button
 *:after,
 *:before
   box-sizing: border-box
-
-*:focus
-  outline: 0
+  text-rendering: optimizeLegibility
 
 a
   color: $link-color
@@ -39,6 +37,20 @@ input[type="password"]
   text-align: start
   text-rendering: optimizelegibility
 
+button
+  +rem(font-size, 14px)
+  background-color: $pink
+  color: white
+  font-weight: bold
+  text-transform: uppercase
+  border: 0
+  +rem(letter-spacing, 1px)
+  +rem(padding, 6px 20px)
+
+  &:hover,
+  &:focus
+    cursor: pointer
+
 ul.nolist
   list-style-type: none
   margin: 0
@@ -55,87 +67,26 @@ ul.nolist
   position: absolute
   width: 1px
 
-// Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p
-.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus
-  clip: auto
-  height: auto
-  margin: 0
-  overflow: visible
-  position: static
-  width: auto
+  // Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p
+  &.focusable
+    &:active,
+    &:focus
+      clip: auto
+      height: auto
+      margin: 0
+      overflow: visible
+      position: static
+      width: auto
 
-/* Begin page styles */
+.wrapper
+  +rem(width, $siteWidth)
+  margin-left: auto
+  margin-right: auto
 
-#header, #searchContainer, #search, #results
-  position: relative
-  width: $siteWidth
-  margin: 0 auto
+main
+  +rem(margin-top, 80px)
+  @extend .wrapper
+  opacity: 0.95
 
-#header
-  height: 30vh
-  min-height: 315px
-  text-align: center
-  padding-top: 100px
-
-#resultscontainer
-  position: relative
-  opacity: 0.9
-  background: white
-  overflow: scroll
-  height: 40vh
-
-  a
-    color: #999
-
-    &:hover
-      text-decoration: underline
-
-/* Menu */
-
-#menu > ul, #items > ul
-  list-style-type: none
-  margin: 0
-  padding: 0
-
-#menu
-  position: absolute
-  top: 0
-  right: 0
-  text-align: right
-  height: 26px
-
-  ul > li
-    +rem(margin, 0 10px 0 0)
-    +rem(padding, 2px 20px)
-    +rem(font-size, 16px)
-    +inline-block
-    +vendor_prefix(border-bottom-left-radius, 5px)
-    +vendor_prefix(border-bottom-right-radius, 5px)
-    color: white
-    background-color: $pink
-    opacity: 0.85
-
-    &.last
-      margin-right: 0
-
-    &.item:hover
-      cursor: pointer
-      background-color: red
-
-/* AJAX Loading modal */
-
-.modal
-  display:    none
-  position:   fixed
-  z-index:    1000
-  top:        0
-  left:       0
-  height:     100%
-  width:      100%
-  background: rgba( 255, 255, 255, .8 ) url('http://i.stack.imgur.com/FhHRx.gif') 50% 320px no-repeat
-
-body.loading
-  overflow: hidden
-
-  .modal
-    display: block
+[data-module]
+  +rem(margin, 10px 0)
