--- a/templates/common/header.jade
+++ b/templates/common/header.jade
@@ -1,9 +1,5 @@
-header(id="header")
-    nav(id="menu")
-        ul
-            li
-                a(href="#" title="About Wardrobe.FM") About
-            li.last
-                a(href="#" title="Get help") Help
-    h1 Wardrobe.FM
-    block searchContainer
+div.wrapper
+  div(id="logo")
+    a(href="#")
+      img(src="../images/logo.png" alt="WardrobeFM Logo")
+  div(id="nav-left")
