Restructuring folders per http://toddmotto.com/opinionated-angular-js-styleguide-for-teams/ and http://sass-guidelin.es/#the-7-1-pattern

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,15 @@
-@import "variables"
-@import "functions/rem"
-@import "functions/mixins"
-@import "fonts"
-@import "icons"
-@import "global"
-@import "header"
+// Variables and Mixins
+@import "utils/rem"
+@import "utils/variables"
+@import "utils/mixins"
+
+// Base
+@import "base/fonts"
+@import "base/icons"
+@import "base/global"
+
+// Layout
+@import "layout/header"
 
 // Modules
 @import "modules/post-artist-search"
