--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,8 @@ main {
 
 [data-module] {
   margin: 10px 0 ;
-  margin: 1rem 0 ; }
+  margin: 1rem 0 ;
+  position: relative; }
 
 header#header {
   background-color: #8f043a;
@@ -202,6 +203,10 @@ header#header {
     margin: 0 5px ;
     margin: 0 0.5rem ;
     text-transform: uppercase; }
+
+[data-module="post-artist-search"] [data-module="post-artist-tags"] {
+  position: absolute;
+  right: 0; }
 
 [data-module="artist-bio"] {
   width: 100%;
