--- a/sass/modules/_post-artist-tags.sass
+++ b/sass/modules/_post-artist-tags.sass
@@ -1,9 +1,14 @@
 [data-module="post-artist-tags"]
-    +rem(margin, 10px 0)
-    .tag
-        +inline-block
-        +rem(padding, 2px 10px 2px 4px)
-        background-color: $pink
-        +rem(font-size, 10px)
-        +rem(margin, 0 5px)
-        text-transform: uppercase
+  +rem(margin, 10px 0)
+  .tag
+    +inline-block
+    +rem(padding, 2px 10px 2px 4px)
+    background-color: $pink
+    +rem(font-size, 10px)
+    +rem(margin, 0 5px)
+    text-transform: uppercase
+
+[data-module="post-artist-search"]
+  [data-module="post-artist-tags"]
+    position: absolute
+    right: 0
