--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -1,6 +1,6 @@
 doctype html
 html(
-  ng-app="artistBio"
+  ng-app="wardrobeFM"
   lang="en" 
   xmlns:og="http://ogp.me/ns#" 
   xmlns:fb="http://www.facebook.com/2008/fbml"
