--- a/sass/base/_fonts.sass
+++ b/sass/base/_fonts.sass
@@ -1,7 +1,8 @@
 .serif
-    font-family: $font-family-sans-serif
-.sans
     font-family: $font-family-serif
+.sans
+    font-family: $font-family-sans-serif
+    letter-spacing: 1px
 
 body
     @extend .serif
