--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,4 +14,4 @@
 // Modules
 @import "modules/post-artist-search"
 @import "modules/post-artist-tags"
-@import "modules/artist-bio"
+@import "modules/post"
