--- a/templates/modules/post-artist-tags.jade
+++ b/templates/modules/post-artist-tags.jade
@@ -1,4 +1,5 @@
 div(data-module="post-artist-tags")
   ul.nolist
     li(ng-repeat="artist in artistList.artists" class="tag")
-      {{artist.text}}
+      a(href="#")
+        {{artist.text}}
