--- a/sass/modules/_post-artist-tags.sass
+++ b/sass/modules/_post-artist-tags.sass
@@ -1,14 +1,28 @@
 [data-module="post-artist-tags"]
   +rem(margin, 10px 0)
+  
   .tag
+    @extend .sans
     +inline-block
-    +rem(padding, 2px 10px 2px 4px)
+    +rem(padding, 0 8px)
     background-color: $pink
     +rem(font-size, 10px)
     +rem(margin, 0 5px)
-    text-transform: uppercase
+    text-transform: lowercase
+    color: white
+    +rem(line-height, 23px)
+    +rem(border-radius, 5px)
+
+    a
+      position: relative
+      &::after
+        @extend %icon-tag-delete
+        +rem(margin-left, 5px)
+        +rem(margin-top, 3px)
+        +inline-block
 
 [data-module="post-artist-search"]
   [data-module="post-artist-tags"]
     position: absolute
     right: 0
+    top: 0
