--- a/templates/index.jade
+++ b/templates/index.jade
@@ -7,4 +7,7 @@ block content
     section(id="post-box")
         include modules/post-artist-search
 
+    section(id="post-list")
+        include modules/post
+
 
