Fucking up the code, man.

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -11,7 +11,7 @@ html(
     header(id="header")
       include common/header
       
-    main(role="main" ng-controller="artistListController as artistList")
+    main(role="main")
       block content
 
     footer
