--- a/templates/common/document_head.jade
+++ b/templates/common/document_head.jade
@@ -8,4 +8,5 @@ head(profile="http://gmpg.org/xfn/11")
     link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic,700italic|Oswald:400,300')
     link(rel='stylesheet' href="css/normalize.css")
     link(rel='stylesheet' href="css/style.css")
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
+    script(src="/js/vendor/angular.min.js")
+    //script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
