--- a/templates/common/script_inclusions.jade
+++ b/templates/common/script_inclusions.jade
@@ -1,5 +1,7 @@
-script(src="/js/vendor/jquery.min.js")
 //script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
+//script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
+script(src="/js/vendor/angular.min.js")
+script(src="/js/vendor/jquery.min.js")
 script(src="//code.jquery.com/jquery-migrate-1.2.1.min.js")
 script(src="/js/vendor/modernizr-2.8.3.js")
 script(src="/js/app.js")
