Fixed it! Now the styling!

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,19 +25,19 @@
       </div>
     </header>
     <main role="main">
-      <section id="post-box" ng-controller="createPost as postArtists">
+      <section id="post-box" ng-controller="createPost">
         <div data-module="post-artist-search">
           <form id="searchform" name="searchform" ng-submit="postArtists.addArtist()">
             <div id="post-text-container" ng-class="{ 'hidden': ! showTextContainer }">
               <label for="post-text" class="visuallyhidden">Enter a caption</label>
-              <input type="text" name="post-text" id="post-text" placeholder="Enter a caption" autocomplete="off" ng-model="postContent.postCaption.text">
+              <input type="text" name="post-text" id="post-text" placeholder="Enter a caption" autocomplete="off" ng-model="postCaption.text">
             </div>
             <div id="post-artist-search">
               <label for="artistsearch" class="visuallyhidden">Who is inspiring you today?</label>
               <input type="text" name="artistsearch" id="artistsearch" placeholder="Who is inspiring you today?" autocomplete="off" autofocus required ng-model="postArtists.text">
-              <div data-module="post-artist-tags" ng-repeat="post in postContent">
+              <div data-module="post-artist-tags">
                 <ul class="nolist">
-                  <li ng-repeat="artist in postContent.postArtists.artists" class="tag"><a href="#">{{artist.name}}</a></li>
+                  <li ng-repeat="artist in postArtists.artists" class="tag"><a href="#">{{artist.name}}</a></li>
                 </ul>
               </div>
             </div>
@@ -55,12 +55,12 @@
             </div>
           </form>
         </div>
-        <div data-module="wfm-post-preview">
+        <div data-module="wfm-post">
           <article>
             <div class="post-image"><img ng-src="{{postContent.postImage.src}}" alt=""></div>
             <div class="post-artists">
               <ul class="nolist">
-                <li ng-repeat="artist in postContent.postArtists.artists" class="post-artist"><img ng-src="{{artist.pic}}" alt="">
+                <li ng-repeat="artist in postArtists.artists" class="post-artist"><img ng-src="{{artist.pic}}" alt="">
                   <div class="artist-meta"><span>{{artist.name}}</span><a ng-click="showDetails = ! showDetails" class="expand">Expand</a>
                     <div ng-class="{ 'hidden': ! showDetails }" class="more-info-container">
                       <div class="more-info">
@@ -77,13 +77,13 @@
             <div class="post-title">
               <div class="user-avatar">
                 <div class="user-meta">
-                  <h3>{{postContent.user.name}}</h3><span>{{postContent.user.description}}</span><span>{{postContent.user.location}}</span>
+                  <h3>{{user.name}}</h3><span>{{user.description}}</span><span>{{user.location}}</span>
                 </div>
               </div>
-              <h2 ng-model="postContent.postCaption.text">{{postContent.postCaption.text}}</h2>
+              <h2 ng-model="postCaption.text">{{postCaption.text}}</h2>
             </div>
             <div class="post-meta">
-              <div class="post-date">{{postContent.datestamp}}</div>
+              <div class="post-date">{{datestamp}}</div>
               <div class="share-bar">
                 <ul class="nolist">
                   <li class="post-delete"> </li>
