--- a/templates/modules/post-artist-tags.jade
+++ b/templates/modules/post-artist-tags.jade
@@ -1,5 +1,4 @@
-div(data-module="post-artist-tags")
+div(data-module="post-artist-tags" ng-repeat="post in postContent")
   ul.nolist
-    li(ng-repeat="artist in createPost.postArtists.artists" class="tag")
-      a(href="#")
-        {{artist.name}}
+    li(ng-repeat="artist in postContent.postArtists.artists" class="tag")
+      a(href="#") {{artist.name}}
