--- a/templates/modules/post-preview.html
+++ b/templates/modules/post-preview.html
@@ -1,17 +1,17 @@
 
-<div data-module="wfm-post">
+<div data-module="wfm-post-preview">
   <article>
-    <div class="post-image"><img ng-src="{{post.pic}}" alt=""/></div>
+    <div class="post-image"><img ng-src="{{postContent.postImage.src}}" alt=""/></div>
     <div class="post-artists">
       <ul class="nolist">
-        <li ng-repeat="artist in artistList.artists" class="post-artist"><img ng-src="{{artist.pic}}" alt="{{artist.name}}"/>
+        <li ng-repeat="artist in postArtists.artists" class="post-artist"><img ng-src="{{artist.pic}}" alt=""/>
           <div class="artist-meta"><span>{{artist.name}}</span><a ng-click="showDetails = ! showDetails" class="expand">Expand</a>
             <div ng-class="{ 'hidden': ! showDetails }" class="more-info-container">
               <div class="more-info">
                 <h3>About {{artist.name}}</h3>
                 <p ng-bind-html="trustAsHtml(artist.bio)"></p>
                 <h3>Upcoming Tours</h3>
-                <p>{{artist.tours}}</p>
+                <!--p {{artist.tours}}-->
               </div>
             </div>
           </div>
@@ -21,13 +21,13 @@
     <div class="post-title">
       <div class="user-avatar">
         <div class="user-meta">
-          <h3>{{user.name}}</h3><span>{{user.description}}</span><span>{{user.location}}</span>
+          <h3>{{postContent.user.name}}</h3><span>{{postContent.user.description}}</span><span>{{postContent.user.location}}</span>
         </div>
       </div>
-      <h2>{{post.title}}</h2>
+      <h2 ng-model="postContent.postCaption.text">{{postContent.postCaption.text}}</h2>
     </div>
     <div class="post-meta">
-      <div class="post-date">{{post.datestamp}}</div>
+      <div class="post-date">{{postContent.datestamp}}</div>
       <div class="share-bar">
         <ul class="nolist">
           <li class="post-delete"> </li>
